Tuve la clase 02. Escribí apuntes e hicimos ejercicios

--- a/Ejercicios/test.ipynb
+++ b/Ejercicios/test.ipynb
@@ -34,7 +34,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hola *Hola* **Hola**\n"
+    "Hola *Hola* **Hola**\n",
+    "\n"
    ]
   },
   {
