--- a/Ejercicios de clases/clase_02.ipynb
+++ b/Ejercicios de clases/clase_02.ipynb
@@ -547,6 +547,537 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------- \n",
+    "\n",
+    "## Ejercicios 02 (b)\n",
+    "\n",
+    "3. Manejos de listas:\n",
+    "    - Cree la lista **N** de longitud 50, donde cada elemento es un número entero de 1 a 50 inclusive (Ayuda: vea la expresión ``range``).\n",
+    "    - Invierta la lista.\n",
+    "    - Extraiga una lista **N2** que contenga sólo los elementos pares de **N**.\n",
+    "    - Extraiga una lista **N3** que contenga sólo aquellos elementos que sean el cuadrado de algún número entero.\n",
+    "\n",
+    "6. Cree una lista de la forma `L = [1,3,5,...,17,19,19,17,...,3,1]`\n",
+    "\n",
+    "7. Operación \"rara\" sobre una lista: **DUDA**\n",
+    "    - Defina la lista `L = [0,1]`\n",
+    "    - Realice la operación `L.append(L)`\n",
+    "    - Ahora imprima L, e imprima el último elemento de `L`.\n",
+    "    - Haga que una nueva lista `L1` tenga el valor del último elemento de `L` y repita el inciso anterior.\n",
+    "    \n",
+    "8. Utilizando funciones y métodos de *strings* en la cadena de caracteres:\n",
+    "\n",
+    "```python\n",
+    "s1='En un lugar de la Mancha de cuyo nombre no quiero acordarme'\n",
+    "\n",
+    "```\n",
+    "  - Obtenga la cantidad de caracteres.\n",
+    "  - Imprima la frase anterior pero con cada palabra empezando en mayúsculas.\n",
+    "  - Cuente cuantas letras 'a' tiene la frase, ¿cuántas vocales tiene?  \n",
+    "  - Imprima el string `s1` centrado en una línea de 80 caracteres, rodeado de guiones en la forma:   \n",
+    "        \n",
+    "    ----------En un lugar de la Mancha de cuyo nombre no quiero acordarme-----------\n",
+    "    \n",
+    "  - Obtenga una lista **L1** donde cada elemento sea una palabra de la oración.\n",
+    "  - Cuente la cantidad de palabras en ``s1`` (utilizando python).\n",
+    "  - Ordene la lista **L1** en orden alfabético.\n",
+    "  - Ordene la lista **L1** tal que las palabras más cortas estén primero.\n",
+    "  - Ordene la lista **L1** tal que las palabras más largas estén primero.\n",
+    "  - Construya un string **s2** con la lista del resultado del punto anterior.\n",
+    "  - Encuentre la palabra más larga y la más corta de la frase.\n",
+    "\n",
+    "\n",
+    "7. Escriba un script que encuentre las raíces de la ecuación cuadrática $a x^{2} + bx +c  = 0$. Los valores de los parámetros defínalos en el mismo script, un poco más arriba.\n",
+    "\n",
+    "3. Considere un polígono regular de $N$ lados inscripto en un círculo de radio unidad:\n",
+    "    - Calcule el ángulo interior del polígono regular de $N$ lados (por ejemplo el de un triángulo es 60 grados, de un cuadrado es 90 grados, y de un pentágono es 108 grados). Exprese el resultado en grados y en radianes para valores de  $N= 3, 5, 6, 8, 9, 10, 12$.\n",
+    "    - ¿Puede calcular la longitud del lado de los polígonos regulares si se encuentran inscriptos en un círculo de radio unidad?\n",
+    "\n",
+    "8. Escriba un *script* (llamado distancia1.py) que defina las variables velocidad y posición inicial $v_{0}$, $z_{0}$, la aceleración $g$, y la masa $m=1$ kg a tiempo $t=0$, y calcule e imprima la posición y velocidad a un tiempo posterior $t$. Ejecute el programa para varios valores de posición y velocidad inicial para $t=2$ segundos.\n",
+    "Recuerde que las ecuaciones de movimiento con aceleración constante son:\n",
+    "\n",
+    "   $$v = v_0 - g t  \\\\  z = z_0 + v_0 t - g t^2/2.$$\n",
+    "\n",
+    "### Adicionales\n",
+    "\n",
+    "9. Calcular la suma:\n",
+    "  $$s_{1} = \\frac{1}{2} \\left(\\sum_{k=0}^{100}k \\right)^{-1}$$\n",
+    "  *Ayuda*: busque información sobre la función `sum()`\n",
+    "\n",
+    "10. Construir una lista `L2` con 2000 elementos, todos iguales a `0.0005`.\n",
+    "\n",
+    "**ESTO SIGNIFICA QUE ES MALO PARA OPERACIONES DE PUNTO FLOTANTE?**\n",
+    "\n",
+    "Imprimir su suma utilizando la función `sum` y comparar con el resultado que arroja la función que existe en el módulo `math` para realizar suma de números de punto flotante.\n",
+    "\n",
+    "--------\n",
+    "."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Creo la lista\n",
+    "N = list(range(1,51))\n",
+    "\n",
+    "#La doy vuelta\n",
+    "N.reverse()\n",
+    "print(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 48, 46, 44, 42, 40, 38, 36, 34, 32, 30, 28, 26, 24, 22, 20, 18, 16, 14, 12, 10, 8, 6, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N2 = [N[i] for i in range(50) if i%2 == 0]\n",
+    "print(N2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[49, 36, 25, 16, 9, 4, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "N3 = [N[i] for i in range(50) if math.sqrt(N[i]) in N]\n",
+    "print(N3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 19, 17, 15, 13, 11, 9, 7, 5, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L1 = list(range(1,20,2))\n",
+    "L2 = L1.copy()\n",
+    "L2.reverse()\n",
+    "L = L1 + L2\n",
+    "print(L)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 5 - ES RECURSIVO? POR QUÉ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, [...]]\n",
+      "[0, 1, [...]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [0,1]\n",
+    "L.append(L)\n",
+    "print(L)\n",
+    "print(L[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, [...]]\n",
+      "[0, 1, [...]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L1 = L[-1]\n",
+    "print(L1)\n",
+    "print(L1[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1, 1.0, [...]]\n",
+      "[0.1, 1.0, [...]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#¿y si lo hago con nros float? TMB\n",
+    "\n",
+    "L = [0.,1.]\n",
+    "L.append(L)\n",
+    "print(L)\n",
+    "print(L[-1])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1='En un lugar de la Mancha de cuyo nombre no quiero acordarme'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59\n",
+      "En Un Lugar De La Mancha De Cuyo Nombre No Quiero Acordarme\n",
+      "Nro de letras 'a':  6\n",
+      "Nro de vocales:  21\n",
+      "---------- En un lugar de la Mancha de cuyo nombre no quiero acordarme ----------\n",
+      "['En', 'un', 'lugar', 'de', 'la', 'Mancha', 'de', 'cuyo', 'nombre', 'no', 'quiero', 'acordarme']\n",
+      "Nro de palabras en s1:  12\n",
+      "Ordeno diferenciando entre mayúsculas y minúsculas: \n",
+      "['En', 'Mancha', 'acordarme', 'cuyo', 'de', 'de', 'la', 'lugar', 'no', 'nombre', 'quiero', 'un']\n",
+      "Ordeno sin diferenciar: \n",
+      "['acordarme', 'cuyo', 'de', 'de', 'en', 'la', 'lugar', 'mancha', 'no', 'nombre', 'quiero', 'un']\n",
+      "Ordeno por tamaño\n",
+      "['En', 'de', 'de', 'la', 'no', 'un', 'cuyo', 'lugar', 'Mancha', 'nombre', 'quiero', 'acordarme']\n",
+      "Ordeno por tamaño\n",
+      "['acordarme', 'quiero', 'nombre', 'Mancha', 'lugar', 'cuyo', 'un', 'no', 'la', 'de', 'de', 'En']\n",
+      "Imprimo s2:\n",
+      "acordarme quiero nombre Mancha lugar cuyo un no la de de En\n",
+      "Palabra más larga:  acordarme\n",
+      "Palabra más corta:  En\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Imprimo el nro de caracteres contando a los espacios como caracteres\n",
+    "print(len(s1))\n",
+    "\n",
+    "#Imprimo la frase anterior pero con cada palabra empezando en mayúscula\n",
+    "s_title = s1\n",
+    "s_title = s_title.title()\n",
+    "print(s_title)\n",
+    "\n",
+    "#Cuento cuántas letras 'a' tiene la frase\n",
+    "print(\"Nro de letras 'a': \", s1.count(\"a\"))\n",
+    "\n",
+    "#Cuento el nro de vocales\n",
+    "print(\"Nro de vocales: \", s1.count(\"a\") + s1.count(\"e\") + s1.count(\"i\") + s1.count(\"o\") + s1.count(\"u\"))\n",
+    "\n",
+    "#Imprimo el string \n",
+    "N_tot_char = 80\n",
+    "N_char_bordes = int((80-len(s1))/2)\n",
+    "print(\"-\"*N_char_bordes, s1, \"-\"*N_char_bordes)\n",
+    "\n",
+    "#Creo la lista L1\n",
+    "L1 = s1.split()\n",
+    "print(L1)\n",
+    "\n",
+    "#Cuento la cantidad de palabras en s1\n",
+    "print(\"Nro de palabras en s1: \", len(s1.split()))\n",
+    "\n",
+    "#Ordeno L1 en orden alfabético\n",
+    "print(\"Ordeno diferenciando entre mayúsculas y minúsculas: \")\n",
+    "L1.sort() #Acá ordena considerando a las mayúsculas como otras letras\n",
+    "print(L1)\n",
+    "#Para ordenarlo independientemente de la primer letra tengo que hacer todo minúsculas antes\n",
+    "\n",
+    "print(\"Ordeno sin diferenciar: \")\n",
+    "L2 = s1\n",
+    "L2 = L2.lower()\n",
+    "L2 = L2.split()\n",
+    "L2.sort()\n",
+    "print(L2)\n",
+    "\n",
+    "#Ordeno la lista L1 tal que las palabras más cortas están primero\n",
+    "L1.sort(key = len)\n",
+    "print(\"Ordeno por tamaño\")\n",
+    "print(L1)\n",
+    "\n",
+    "#Ordeno la lista L1 tal que las palabras más largas están primero\n",
+    "L1.sort(key = len)\n",
+    "L1.reverse()\n",
+    "print(\"Ordeno por tamaño\")\n",
+    "print(L1)\n",
+    "\n",
+    "#Construyo s2\n",
+    "s2 = \" \".join(L1)\n",
+    "print(\"Imprimo s2:\")\n",
+    "print(s2)\n",
+    "\n",
+    "#Encuentro la palabra más larga y la más corta de la frase\n",
+    "s2_split = s2.split()\n",
+    "print(\"Palabra más larga: \", s2_split[0])\n",
+    "print(\"Palabra más corta: \", s2_split[-1])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las raíces son: \n",
+      " (-0.5+0.8660254037844386j) \n",
+      " (-0.5-0.8660254037844386j) \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cmath #por si alguna raíz es compleja\n",
+    "\n",
+    "#Defino los coeficientes\n",
+    "a = 1\n",
+    "b = 1\n",
+    "c = 1\n",
+    "\n",
+    "#Calculo las raíces con la fórmula cuadrática\n",
+    "raiz_1 = (-b + cmath.sqrt(b**2 - 4*a*c))/2/a\n",
+    "raiz_2 = (-b - cmath.sqrt(b**2 - 4*a*c))/2/a\n",
+    "\n",
+    "print(\"Las raíces son: \\n\", raiz_1, \"\\n\", raiz_2, \"\\n\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ángulo interior de un polígono de 3 lados: 60.0 ° = 1.0471975511965976 rad\n",
+      "Ángulo interior de un polígono de 4 lados: 90.0 ° = 1.5707963267948966 rad\n",
+      "Ángulo interior de un polígono de 5 lados: 108.0 ° = 1.8849555921538759 rad\n",
+      "Ángulo interior de un polígono de 6 lados: 120.0 ° = 2.0943951023931953 rad\n",
+      "Ángulo interior de un polígono de 8 lados: 135.0 ° = 2.356194490192345 rad\n",
+      "Ángulo interior de un polígono de 9 lados: 140.0 ° = 2.443460952792061 rad\n",
+      "Ángulo interior de un polígono de 10 lados: 144.0 ° = 2.5132741228718345 rad\n",
+      "Ángulo interior de un polígono de 12 lados: 150.0 ° = 2.6179938779914944 rad\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dado un polígono regular de N lados inscripto en un círculo de radio unidad\n",
+    "#por cada lado puedo definir un triángulo isósceles cuyos ángulos valgan 360/N y (180-360/N)/2 los dos iguales. De este modo, el ángulo interior es 2*(180-360/N)/2 = (180-360/N)\n",
+    "import math\n",
+    "pi = math.pi\n",
+    "\n",
+    "N_list = [3,5,6,8,9,10,12]\n",
+    "for N in N_list:\n",
+    "    angle_deg = 180-360/N\n",
+    "    angle_rad = angle_deg*pi/180\n",
+    "    print(f\"Ángulo interior de un polígono de {N} lados: {angle_deg} ° = {angle_rad} rad\")\n",
+    "\n",
+    "#Para calcular el lado basta con usar trigonometría sobre la mitad del triángulo isósceles de ángulos conocidos, usando que el círculo es de radio unidad"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 9\n",
+    "dstancia1.py\n",
+    "No sé muy bien de qué sirve este ejercicio..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v =  -19\n",
+      "z =  -17.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "v0 = 1\n",
+    "z0 = 1\n",
+    "g = 10\n",
+    "m = 1\n",
+    "\n",
+    "t = 2 #En ningún momento dice que se tenga que pedir al usuario este dato\n",
+    "\n",
+    "v = v0 - g*t\n",
+    "z = z0 + v0*t - g*t**2/2\n",
+    "\n",
+    "print(\"v = \", v)\n",
+    "print(\"z = \", z)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adicionales - Ejercicio 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.900990099009902e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Creo una lista cuyos elementos sean los términos a sumar\n",
+    "lista = list(range(101))\n",
+    "s1 = 1/2/sum(lista)\n",
+    "print(s1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adicionales - Ejercicio 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9999999999999453\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "L2 = [0.0005 for i in range(2000)]\n",
+    "\n",
+    "#Calculo la suma usando sum\n",
+    "print(sum(L2))\n",
+    "\n",
+    "#Calculo la suma usando math\n",
+    "print(math.fsum(L2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
