--- a/Ejercicios de clases/clase_03.ipynb
+++ b/Ejercicios de clases/clase_03.ipynb
@@ -633,28 +633,80 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "puntos = "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejercicio 6"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J_N =  2.403258308835181e-38\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fórmula para despejar J_{n-1}\n",
+    "N = 3\n",
+    "x = 2.5\n",
+    "\n",
+    "M = N + 20\n",
+    "J_M1 = 0 #J_{M+1}\n",
+    "J_M = 1 #J_{M}\n",
+    "\n",
+    "J_array = [] #Guardo los valores en el orden [M+1, M, M-1, ...]\n",
+    "J_array.append(0)\n",
+    "J_array.append(1)\n",
+    "K = M\n",
+    "while(K>0):\n",
+    "    #Calculo el nuevo valor\n",
+    "    J_K1 = J_array[M-K]\n",
+    "    J_K = J_array[M-K+1]\n",
+    "    J_array.append(2*K/x*J_K - J_K1) #J_{M-1}\n",
+    "    #Actualizo valores para el siguiente paso\n",
+    "    K = K - 1\n",
+    "\n",
+    "#Normalizo los valores\n",
+    "#Calculo la suma\n",
+    "suma = 0\n",
+    "for n in range(1,M):\n",
+    "    suma = suma + 2*J_array[n]**2\n",
+    "suma = suma + J_array[0]**2\n",
+    "coef = 1/suma\n",
+    "#Los valores correctos son coef*J_array\n",
+    "print(\"J_N = \", J_array[N]*coef)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(range(1,10)))\n"
+   ]
   },
   {
    "cell_type": "code",
