Fui a la clase 05

--- a/Ejercicios de clases/clase_04.ipynb
+++ b/Ejercicios de clases/clase_04.ipynb
@@ -571,6 +571,117 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "\n",
+    "## Ejercicios 4 (b)\n",
+    "\n",
+    "3. Escriba funciones para analizar la divisibilidad de enteros:\n",
+    "    * La función `es_divisible1(x)` que retorna verdadero si x es divisible por alguno de `2,3,5,7` o falso en caso contrario.\n",
+    "    * La función `es_divisible_por_lista` que cumple la misma función que `es_divisible1` pero recibe dos argumentos: el entero `x` y una variable del tipo lista que contiene los valores para los cuáles debemos examinar la divisibilidad. Las siguientes expresiones deben retornar el mismo valor:\n",
+    "    ```python\n",
+    "    es_divisible1(x) \n",
+    "    es_divisible_por_lista(x, [2,3,5,7])\n",
+    "    es_divisible_por_lista(x)\n",
+    "    ```\n",
+    "    * La función `es_divisible_por` cuyo primer argumento (mandatorio) es `x`, y luego puede aceptar un número indeterminado de argumentos:\n",
+    "    ```python\n",
+    "    es_divisible_por(x)  # retorna verdadero siempre\n",
+    "    es_divisible_por(x, 2) # verdadero si x es par\n",
+    "    es_divisible_por(x, 2, 3, 5, 7) # igual resultado que es_divisible1(x) e igual a es_divisible_por_lista(x)\n",
+    "    es_divisible_por(x, 2, 3, 5, 7, 9, 11, 13)  # o cualquier secuencia de argumentos debe funcionar\n",
+    "    ```\n",
+    "\n",
+    "-----\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "\n",
+    "## Ejercicios 04 (c)\n",
+    "\n",
+    "4. Escriba una función `crear_sen(A, w)` que acepte dos números reales $A, w$ como argumentos y devuelva la función `f(x)`.\n",
+    "\n",
+    "  Al evaluar la función `f` en un dado valor $x$ debe dar el resultado: $f(x) = A \\sin(w x)$ tal que se pueda utilizar de la siguiente manera:\n",
+    "  \n",
+    "  ```python\n",
+    "  f = crear_sen(3, 1.5)\n",
+    "  f(2)          # Debería imprimir el resultado de 3*sin(1.5*2)=0.4233600241796016\n",
+    "  ```\n",
+    "\n",
+    "-----"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "-----\n",
+    "\n",
+    "## Ejercicios 04 (d)\n",
+    "\n",
+    "\n",
+    "5. Escriba una serie de funciones que permitan trabajar con polinomios. Vamos a representar a un polinomio como una lista de números reales, donde cada elemento corresponde a un coeficiente que acompaña una potencia\n",
+    "\n",
+    "    * Una función que devuelva el orden del polinomio (un número entero)\n",
+    "    * Una función que sume dos polinomios y devuelva un polinomio (objeto del mismo tipo)\n",
+    "    * Una función que multiplique dos polinomios y devuelva el resultado en otro polinomio\n",
+    "    * Una función devuelva la derivada del polinomio (otro polinomio).\n",
+    "    * Una función que acepte el polinomio y devuelva la función correspondiente.\n",
+    "     \n",
+    "6. **PARA ENTREGAR.** Describimos una grilla de **sudoku** como un string de nueve líneas, cada una con 9 números, con números entre 1 y 9. Escribir un conjunto de funciones que permitan chequear si una grilla de sudoku es correcta. Para que una grilla sea correcta deben cumplirse las siguientes condiciones\n",
+    "    - Los números están entre 1 y 9\n",
+    "    - En cada fila no deben repetirse\n",
+    "    - En cada columna no deben repetirse\n",
+    "    - En todas las regiones de 3x3 que no se solapan, empezando de cualquier esquina, no deben repetirse\n",
+    "  \n",
+    "    1. Escribir una función que convierta un string con formato a una lista bidimensional. El string estará dado con nueve números por línea, de la siguiente manera (los espacios en blanco en cada línea pueden variar):\n",
+    "    \n",
+    "    ```python\n",
+    "    sudoku = \"\"\"145327698\n",
+    "            839654127\n",
+    "            672918543\n",
+    "            496185372\n",
+    "            218473956\n",
+    "            753296481\n",
+    "            367542819\n",
+    "            984761235\n",
+    "            521839764\"\"\"\n",
+    "    ```\n",
+    "    \n",
+    "    2. Escribir una función `check_repetidos()` que tome por argumento una lista (unidimensional) y devuelva verdadero si la lista tiene elementos repetidos y falso en caso contrario (puede ser conveniente explorar el uso de `set`).\n",
+    "    \n",
+    "    3. Escribir la función `check_sudoku()` que toma como argumento una grilla (como una lista bidimensional de `9x9`) y devuelva verdadero si los números corresponden a la resolución correcta del Sudoku y falso en caso contrario. \n",
+    "    Note que debe verificar que los números no se repiten en filas, ni en columnas ni en recuadros de `3x3`. Para obtener la posición de los recuadros, puede investigar que hacen las líneas de código:\n",
+    "    \n",
+    "    ```python\n",
+    "    j, k = (i // 3) * 3, (i % 3) * 3\n",
+    "    r = [grid[a][b] for a in range(j, j+3) for b in range(k, k+3)]\n",
+    "    ```\n",
+    "\n",
+    "    suponiendo que `grid` es el nombre de nuestra lista bidimensional, cuando `i` toma valores entre `0` y `8`.\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
