--- a/Ejercicios de clases/clase_04.ipynb
+++ b/Ejercicios de clases/clase_04.ipynb
@@ -601,6 +601,115 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def es_divisible1(x):\n",
+    "    '''\n",
+    "    Función que evalúa si el input (x) es divisible por 2, 3, 5 o 7\n",
+    "\n",
+    "    Parameters\n",
+    "    x: entero\n",
+    "    \n",
+    "    Return\n",
+    "    ------\n",
+    "    bool True si es divisible, False caso contrario\n",
+    "    '''\n",
+    "    factores = [2,3,5,7]\n",
+    "    for factor in factores:\n",
+    "        if x%factor==0: #Si el módulo es cero\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "es_divisible1(11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_divisible_por_lista(x, lista = [2,3,5,7]):\n",
+    "    '''\n",
+    "    Función que evalúa si el input (x) es divisible por los elementos en lista\n",
+    "\n",
+    "    Parameters\n",
+    "    x: entero\n",
+    "    lista: lista de enteros. Por default lista = [2,3,5,7]\n",
+    "    Return\n",
+    "    ------\n",
+    "    bool True si es divisible, False caso contrario\n",
+    "    '''\n",
+    "    for factor in lista:\n",
+    "        if x%factor==0: #Si el módulo es cero\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "x = 2\n",
+    "print( es_divisible1(x), es_divisible_por_lista(x, [2,3,5,7]), es_divisible_por_lista(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False False False False True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_divisible_por(x, *factores):\n",
+    "    '''\n",
+    "    Función que evalúa si el input (x) es divisible por los factores\n",
+    "\n",
+    "    Parameters\n",
+    "    x: entero\n",
+    "    factores: *args (tupla) de enteros. Por default lista = [2,3,5,7]\n",
+    "    Return\n",
+    "    ------\n",
+    "    bool True si es divisible, False caso contrario\n",
+    "    '''\n",
+    "\n",
+    "    if factores != (): #Si hay factores\n",
+    "        for factor in factores:\n",
+    "            if x%factor==0: #Si el módulo es cero\n",
+    "                return True\n",
+    "        return False\n",
+    "    else: #Si no hay factores\n",
+    "        return True\n",
+    "\n",
+    "x = 13\n",
+    "print(es_divisible_por(x),es_divisible_por(x,2), es_divisible_por(x,2,3,5,7), es_divisible1(x), es_divisible_por_lista(x), es_divisible_por(x,2,3,5,7,9,11,13))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -619,6 +728,45 @@
     "  ```\n",
     "\n",
     "-----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4233600241796016"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def crear_sen(A,w):\n",
+    "    '''\n",
+    "    Crea la función A*sin(wx)\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    A (nro real): amplitud de la onda\n",
+    "    w(nro real): frecuencia de la onda\n",
+    "    \n",
+    "    '''\n",
+    "\n",
+    "    def f(x):\n",
+    "        return A*math.sin(w*x)\n",
+    "\n",
+    "    return f\n",
+    "\n",
+    "f = crear_sen(3,1.5)\n",
+    "f(2)"
    ]
   },
   {
@@ -679,8 +827,343 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Ejercicio 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Un polinomio se representa como una lista de nros reales, donde cada elemento corresponde a un coef que acompaña una potencia\n",
+    "#Ej: [0,1,2] es 0 + 1*x + 2*x**2\n",
+    "\n",
+    "def orden_polinomio(polinomio):\n",
+    "    '''\n",
+    "    Devuelve el orden de un polinomio\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    polinomio: lista donde cada elemento hace referencia a un coeficiente de cada potencia. Ej: [0,1,2] es 0 + 1*x + 2*x**2\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    int: orden\n",
+    "    \n",
+    "    '''\n",
+    "    grado = len(polinomio)-1\n",
+    "    for coef in polinomio[::-1]: #Esto está en caso de que el polinomio tenga coef nulo acompañando a la mayor potencia\n",
+    "        if coef == 0:\n",
+    "            grado -= 1\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    return grado\n",
+    "\n",
+    "orden_polinomio([0,1,1,0.0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 2, 5]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def suma_polinomios(polinomio1, polinomio2):\n",
+    "    '''\n",
+    "    Función que suma dos polinomios\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    polinomio1 y polinomio2: lista donde cada elemento hace referencia a un coeficiente de cada potencia. Ej: [0,1,2] es 0 + 1*x + 2*x**2\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    list: polinomio3 = polinomio1 + polinomio2\n",
+    "\n",
+    "    '''\n",
+    "    #La nueva lista tendrá un tamaño igual al mayor grado\n",
+    "\n",
+    "    lista_de_polinomios = [polinomio1,polinomio2]\n",
+    "\n",
+    "    mayor_orden = max([orden_polinomio(polinomio1), orden_polinomio(polinomio2)])\n",
+    "    menor_orden = min([orden_polinomio(polinomio1), orden_polinomio(polinomio2)])\n",
+    "\n",
+    "    polinomio3 = [0]*(mayor_orden + 1)\n",
+    "\n",
+    "    pol_mayor = [orden_polinomio(polinomio1), orden_polinomio(polinomio2)].index(mayor_orden)\n",
+    "    \n",
+    "    for i in range(menor_orden + 1):\n",
+    "        polinomio3[i] = polinomio1[i] + polinomio2[i]\n",
+    "\n",
+    "    for i in range(menor_orden + 1, mayor_orden + 1):\n",
+    "        polinomio3[i] = lista_de_polinomios[pol_mayor][i]\n",
+    "\n",
+    "    return polinomio3\n",
+    "\n",
+    "suma_polinomios([1,2], [0,2,2,5,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 5, 2]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def producto_polinomios(pol1,pol2):\n",
+    "    '''\n",
+    "    Calcula el producto de los polinomios pol1 y pol2. Devuelve otro polinomio\n",
+    "    '''\n",
+    "\n",
+    "    if len(pol2) == 1:\n",
+    "        poli_partial1 = [0]*len(pol1)\n",
+    "        for i in range(len(pol1)):\n",
+    "            poli_partial1[i] = pol1[i]*pol2[0]\n",
+    "        return poli_partial1\n",
+    "    else:\n",
+    "        suma = []\n",
+    "        for j in range(len(pol2)):\n",
+    "            poli_partial2 = [pol2[j]]\n",
+    "            producto = j*[0] + producto_polinomios(pol1,poli_partial2)\n",
+    "            # print(producto)\n",
+    "            suma = suma_polinomios(suma,producto)\n",
+    "        return suma\n",
+    "        \n",
+    "producto_polinomios([1,2,0,0],[2,1,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 6]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def derivada_polinomio(pol):\n",
+    "    '''\n",
+    "    Calcula la derivada del polinomio pol. Devuelve otro polinomio\n",
+    "    '''\n",
+    "    #Defino el nuevo polinomio\n",
+    "    orden_deriv = orden_polinomio(pol)\n",
+    "    pol_deriv = [0]*orden_deriv\n",
+    "    for i in range(orden_deriv):\n",
+    "        pol_deriv[i] = pol[i+1]*(i+1)\n",
+    "    return pol_deriv\n",
+    "\n",
+    "derivada_polinomio([1,2,3,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def polinomio(pol):\n",
+    "    '''\n",
+    "    Devuelve la función polinomio\n",
+    "    '''\n",
+    "    def f(x):\n",
+    "        suma = 0\n",
+    "        for i in range(orden_polinomio(pol) + 1):\n",
+    "            suma+=pol[i]*x**i\n",
+    "        return suma\n",
+    "    return f\n",
+    "\n",
+    "ff = polinomio([1,1,0])\n",
+    "print(ff(1))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sudoku: grilla de 9 líneas con 9 caracteres cada una\n",
+    "\n",
+    "sudoku = \"\"\"145327698\n",
+    "        839654127\n",
+    "        672918543\n",
+    "        496185372\n",
+    "        218473956\n",
+    "        753296481\n",
+    "        367542819   \n",
+    "        984761235\n",
+    "        521839764\"\"\"\n",
+    "\n",
+    "def string_to_list(sudoku_str):\n",
+    "    '''\n",
+    "    Convierte un string con formato sudoku a una lista bidimensional\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    sudoku_str: string de 9 filas, cada una formada por 9 números\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    sudoku_list: lista de tamaño 9x9 donde cada elemento hace referencia al correspondiente en sudoku_str\n",
+    "    '''\n",
+    "    size = 9 #tamaño vertical y horizontal del sudoku\n",
+    "    #Creo la lista\n",
+    "    sudoku_list = []\n",
+    "\n",
+    "    sudoku_split = sudoku.split()\n",
+    "\n",
+    "    linea = [0]*9\n",
+    "    for i in  range(size):\n",
+    "        for j in range(size):\n",
+    "            linea[j] = int(sudoku_split[i][j])\n",
+    "        sudoku_list.append(linea.copy())\n",
+    "\n",
+    "    return sudoku_list\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_repetidos(lista):\n",
+    "    \n",
+    "    conj = set(lista)\n",
+    "    if len(conj) != len(lista):\n",
+    "        return True #Hay elementos repetidos\n",
+    "    else:\n",
+    "        return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_sudoku(grilla):\n",
+    "    size = 9\n",
+    "\n",
+    "    #Verifico que los nros estén entre el 1 y el 9\n",
+    "    numeros = [1,2,3,4,5,6,7,8,9]\n",
+    "    for i in range(size):\n",
+    "        for j in range(size):\n",
+    "            if (grilla[i][j] in numeros) == False: #Si el nro no está en la lista de nros\n",
+    "                return False\n",
+    "            \n",
+    "    #Verifico que los nros de cada fila no se repitan\n",
+    "    for i in range(size):\n",
+    "        if check_repetidos(grilla[i]):\n",
+    "            return False\n",
+    "    \n",
+    "    #Verifico que los nros en cada columna no se repitan\n",
+    "    for i in range(size):\n",
+    "        columna = [0]*9\n",
+    "        for j in range(size):\n",
+    "            columna[j] = grilla[j][i]\n",
+    "        print(columna)\n",
+    "        if check_repetidos(columna):\n",
+    "            return False\n",
+    "        \n",
+    "    #Verifico que en todas las regiones de 3x3 que no se solapan, los nros no se repitan\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 8, 6, 4, 2, 7, 3, 9, 5]\n",
+      "[4, 3, 7, 9, 1, 5, 6, 8, 2]\n",
+      "[5, 9, 2, 6, 8, 3, 7, 4, 1]\n",
+      "[3, 6, 9, 1, 4, 2, 5, 7, 8]\n",
+      "[2, 5, 1, 8, 7, 9, 4, 6, 3]\n",
+      "[7, 4, 8, 5, 3, 6, 2, 1, 9]\n",
+      "[6, 1, 5, 3, 9, 4, 8, 2, 7]\n",
+      "[9, 2, 4, 7, 5, 8, 1, 3, 6]\n",
+      "[8, 7, 3, 2, 6, 1, 9, 5, 4]\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "    j, k = (i // 3) * 3, (i % 3) * 3\n",
+    "    r = [grid[a][b] for a in range(j, j+3) for b in range(k, k+3)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
