Terminé de hacer el ejercicio de la clase 4 para entregar e hice los ejercicios de la clase 5. Me quedaron dudas

--- a/Ejercicios de clases/clase_04.ipynb
+++ b/Ejercicios de clases/clase_04.ipynb
@@ -1039,38 +1039,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "#sudoku: grilla de 9 líneas con 9 caracteres cada una\n",
     "\n",
-    "sudoku = \"\"\"145327698\n",
-    "        839654127\n",
-    "        672918543\n",
-    "        496185372\n",
-    "        218473956\n",
-    "        753296481\n",
-    "        367542819   \n",
-    "        984761235\n",
-    "        521839764\"\"\"\n",
-    "\n",
     "def string_to_list(sudoku_str):\n",
     "    '''\n",
-    "    Convierte un string con formato sudoku a una lista bidimensional\n",
+    "    Convierte un string con formato sudoku a una lista bidimensional de la forma [[...],[...],...]\n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    sudoku_str: string de 9 filas, cada una formada por 9 números\n",
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    sudoku_list: lista de tamaño 9x9 donde cada elemento hace referencia al correspondiente en sudoku_str\n",
+    "    sudoku_list: lista de números enteros tamaño 9x9 donde cada elemento hace referencia al correspondiente en sudoku_str\n",
     "    '''\n",
     "    size = 9 #tamaño vertical y horizontal del sudoku\n",
     "    #Creo la lista\n",
     "    sudoku_list = []\n",
     "\n",
-    "    sudoku_split = sudoku.split()\n",
+    "    sudoku_split = sudoku_str.split()\n",
     "\n",
     "    linea = [0]*9\n",
     "    for i in  range(size):\n",
@@ -1084,12 +1075,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_repetidos(lista):\n",
+    "    '''\n",
+    "    Verifica si una lista tiene elementos repetidos\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    list: lista\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    bool: True si tiene elementos repetidos y False en caso contrario\n",
     "    \n",
+    "    '''\n",
     "    conj = set(lista)\n",
     "    if len(conj) != len(lista):\n",
     "        return True #Hay elementos repetidos\n",
@@ -1099,11 +1101,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_sudoku(grilla):\n",
+    "    '''\n",
+    "    Dada una grilla bidimensional de nros, verifica si es solución correcta del Sudoku. Para que sea una solución correcta debe cumplirse que\n",
+    "    - Los números estén entre 1 y 9\n",
+    "    - En cada fila no deben repetirse\n",
+    "    - En cada columna no deben repetirse\n",
+    "    - En todas las regiones de 3x3 que no se solapan, empezando de cualquier esquina, no deben repetirse\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    grilla: lista bidimensional de números enteros de tamaño 9x9\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    bool: True si corresponde a la resolución correcta del Sudoku y False en caso contrario.\n",
+    "    \n",
+    "    '''\n",
     "    size = 9\n",
     "\n",
     "    #Verifico que los nros estén entre el 1 y el 9\n",
@@ -1111,11 +1129,13 @@
     "    for i in range(size):\n",
     "        for j in range(size):\n",
     "            if (grilla[i][j] in numeros) == False: #Si el nro no está en la lista de nros\n",
+    "                # print(\"Los nros no están entre 1 y 9\")\n",
     "                return False\n",
     "            \n",
     "    #Verifico que los nros de cada fila no se repitan\n",
     "    for i in range(size):\n",
     "        if check_repetidos(grilla[i]):\n",
+    "            # print(\"Los nros se repiten en una fila\")\n",
     "            return False\n",
     "    \n",
     "    #Verifico que los nros en cada columna no se repitan\n",
@@ -1123,40 +1143,65 @@
     "        columna = [0]*9\n",
     "        for j in range(size):\n",
     "            columna[j] = grilla[j][i]\n",
-    "        print(columna)\n",
     "        if check_repetidos(columna):\n",
+    "            # print(\"Los nros se repiten en una columna\")\n",
     "            return False\n",
     "        \n",
     "    #Verifico que en todas las regiones de 3x3 que no se solapan, los nros no se repitan\n",
-    "\n",
-    "    "
+    "    for i in range(size):\n",
+    "        j, k = (i // 3) * 3, (i % 3) * 3 #Según esto, cuando i = 0,1,2 j=0 y k = 0,3,6. De este modo, se recorren los 4 cuadrados 3x3 de arriba de izquierda a derecha. De forma análoga cuando i = 3,4,5,6,7,8\n",
+    "        r = [grilla[a][b] for a in range(j, j+3) for b in range(k, k+3)] #Se genera una lista con los elementos de cada cuadrado\n",
+    "        if check_repetidos(r):\n",
+    "            # print(\"Los nros se repiten en un cuadrado\")\n",
+    "            return False\n",
+    "    \n",
+    "    #Si la ejecución llegó hasta acá, el sudoku es resolución correcta\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 8, 6, 4, 2, 7, 3, 9, 5]\n",
-      "[4, 3, 7, 9, 1, 5, 6, 8, 2]\n",
-      "[5, 9, 2, 6, 8, 3, 7, 4, 1]\n",
-      "[3, 6, 9, 1, 4, 2, 5, 7, 8]\n",
-      "[2, 5, 1, 8, 7, 9, 4, 6, 3]\n",
-      "[7, 4, 8, 5, 3, 6, 2, 1, 9]\n",
-      "[6, 1, 5, 3, 9, 4, 8, 2, 7]\n",
-      "[9, 2, 4, 7, 5, 8, 1, 3, 6]\n",
-      "[8, 7, 3, 2, 6, 1, 9, 5, 4]\n",
-      "None\n"
+      "Sudoku resuelto? True\n",
+      "Agrego un 0. Sudoku resuelto? False\n",
+      "Repetición en fila. Sudoku resuelto? False\n"
      ]
     }
    ],
    "source": [
-    "    j, k = (i // 3) * 3, (i % 3) * 3\n",
-    "    r = [grid[a][b] for a in range(j, j+3) for b in range(k, k+3)]\n"
+    "#Test:\n",
+    "\n",
+    "#Dado el sudoku\n",
+    "sudoku = \"\"\"145327698\n",
+    "        839654127\n",
+    "        672918543\n",
+    "        496185372\n",
+    "        218473956\n",
+    "        753296481\n",
+    "        367542819   \n",
+    "        984761235\n",
+    "        521839764\"\"\"\n",
+    "\n",
+    "#Lo convierto a lista y checkeo si está resuelto\n",
+    "sudoku_list = string_to_list(sudoku)\n",
+    "print(\"Sudoku resuelto?\", check_sudoku(sudoku_list))\n",
+    "\n",
+    "#Agrego un 0\n",
+    "import copy\n",
+    "sudoku_list1 = copy.deepcopy(sudoku_list) #Si no hago una deepcopy, los elementos de sudoku_list1 (que son listas) siguen siendo los mismos que de sudoku_list. Por lo tanto, al modificar uno también estaría modificando el otro.\n",
+    "sudoku_list1[0][0] = 0\n",
+    "print(\"Agrego un 0. Sudoku resuelto?\", check_sudoku(sudoku_list1))\n",
+    "\n",
+    "#Agrego un 1 para que se repita en una fila\n",
+    "sudoku_list1 = copy.deepcopy(sudoku_list)\n",
+    "sudoku_list1[0][1] = 1\n",
+    "print(\"Repetición en fila. Sudoku resuelto?\", check_sudoku(sudoku_list1))"
    ]
   },
   {
