Fui a las clase 06

--- a/Ejercicios de clases/clase_05.ipynb
+++ b/Ejercicios de clases/clase_05.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,9 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\"head\" no se reconoce como un comando interno o externo,\n",
+      "programa o archivo por lotes ejecutable.\n"
+     ]
+    }
+   ],
    "source": [
     "!head archivo"
    ]
@@ -70,9 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "El sistema no puede encontrar la ruta especificada.\n"
+     ]
+    }
+   ],
    "source": [
     "!type \"../data/names.txt\" # Muestro el contenido del archivo"
    ]
@@ -139,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,12 +182,36 @@
     "fname = 'data/pares.txt'\n",
     "with open(fname,'w') as fo:\n",
     "    fo.write('\\n'.join(s.split()[(len(s.split())//2)*2-1:0:-2]))\n",
+    "\n",
     "#LO ANTERIOR NO VALE SI EL FILE TIENE ORIGINALMENTE UN NRO IMPAR DE ELEMENTOS. SE PUEDE HACER SIN USAR UN FOR O IF???"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#La duda anterior se resumen en lo siguiente:\n",
+    "#Dada una lista con N elementos, quiero quedarme con los elementos pares, es decir, el elemento 0, 2, 4, 6, .... PERO quiero guardarlo en el orden inverso\n",
+    "N = 4\n",
+    "lista = list(range(N))\n",
+    "lista2 = lista[::2]\n",
+    "lista2.reverse()\n",
+    "print(lista2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,24 +219,22 @@
     "fname = 'data/pares.txt'\n",
     "with open(fname,'a') as fo: #Modo 'a' de 'append' para no sobreescribir el archivp\n",
     "    fo.write(\"\\n\")\n",
-    "    fo.write(';'.join(s.split()[0::2]))\n",
-    "\n",
-    "\n"
+    "    fo.write(';'.join(s.split()[0::2]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Defino la función que utilizaré para comparar\n",
-    "def name_comparison(x,y):\n",
-    "    if(len(x) == len(y)):\n",
-    "        cmp(x,y)\n",
-    "    else:\n",
-    "        cmp(len(x),len(y))\n",
-    "    return\n",
+    "# def name_comparison(x,y):\n",
+    "#     if(len(x) == len(y)):\n",
+    "#         cmp(x,y)\n",
+    "#     else:\n",
+    "#         cmp(len(x),len(y))\n",
+    "#     return\n",
     "\n",
     "#Leo el archivo names\n",
     "fname = \"data/names.txt\"\n",
@@ -214,8 +253,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Acá yo estoy asumiendo que al hacer la 2da vez un sort, el orden de las palabras se mantienen. Efectivamente esto es así y según un profe ese comportamiento se reporta en la documentación"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +446,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\lupam\\OneDrive\\Escritorio\\GitHub\\IntroPython\\Ejercicios de clases\\clase_05.ipynb Celda 6\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lupam/OneDrive/Escritorio/GitHub/IntroPython/Ejercicios%20de%20clases/clase_05.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lupam/OneDrive/Escritorio/GitHub/IntroPython/Ejercicios%20de%20clases/clase_05.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mif\u001b[39;00m x \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/lupam/OneDrive/Escritorio/GitHub/IntroPython/Ejercicios%20de%20clases/clase_05.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mx = \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m, no debería ser positivo\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lupam/OneDrive/Escritorio/GitHub/IntroPython/Ejercicios%20de%20clases/clase_05.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mif\u001b[39;00m x\u001b[39m<\u001b[39m\u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lupam/OneDrive/Escritorio/GitHub/IntroPython/Ejercicios%20de%20clases/clase_05.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mx = \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m, sí debería ser positivo\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\lupam\\OneDrive\\Escritorio\\GitHub\\IntroPython\\Ejercicios de clases\\clase_05.ipynb Celda 25\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lupam/OneDrive/Escritorio/GitHub/IntroPython/Ejercicios%20de%20clases/clase_05.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lupam/OneDrive/Escritorio/GitHub/IntroPython/Ejercicios%20de%20clases/clase_05.ipynb#X33sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mif\u001b[39;00m x \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/lupam/OneDrive/Escritorio/GitHub/IntroPython/Ejercicios%20de%20clases/clase_05.ipynb#X33sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mx = \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m, no debería ser positivo\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lupam/OneDrive/Escritorio/GitHub/IntroPython/Ejercicios%20de%20clases/clase_05.ipynb#X33sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mif\u001b[39;00m x\u001b[39m<\u001b[39m\u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lupam/OneDrive/Escritorio/GitHub/IntroPython/Ejercicios%20de%20clases/clase_05.ipynb#X33sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mx = \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m, sí debería ser positivo\u001b[39m\u001b[39m\"\u001b[39m)\n",
       "\u001b[1;31mException\u001b[0m: x = 1, no debería ser positivo"
      ]
     }
@@ -422,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
